<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:id="@+id/titleTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/track"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            android:text="@string/name"
            />

        <Button
            android:id="@+id/btnConfirmUsername"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:onClick="onCreateEventHandler"
            android:text="@string/track"
            style="@style/Widget.AppCompat.Button.Colored"
            />

      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:id="@+id/titleControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/controls"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <Button
            android:id="@+id/buttonOpenControls"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:onClick="onOpenControls"
            android:text="@string/open_controls"
            style="@style/Widget.AppCompat.Button.Colored"
            />

      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:id="@+id/titleEndpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/endpointTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <EditText
            android:id="@+id/editTextEndpointIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            android:text="@string/endpoint"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:onClick="onSetEndpointHandler"
            android:text="@string/setEndpoint"
            style="@style/Widget.AppCompat.Button.Colored"
            />

      </LinearLayout>
    </android.support.v7.widget.CardView>

  </LinearLayout>
</ScrollView>

